Docker WIP. Now fails at:
ansible    | TASK [Islandora-Devops.karaf : Start Karaf service] ****************************
ansible    | Thursday 30 January 2020  07:15:30 +0000 (0:00:00.330)       0:13:07.153 ******
ansible    | fatal: [default]: FAILED! => {"changed": false, "msg": "Unable to start service karaf: Warning: karaf.service changed on disk. Run 'systemctl daemon-reload' to reload units.\nJob for karaf.service failed because a timeout was exceeded. See \"systemctl status karaf.service\" and \"journalctl -xe\" for details.\n"}
ansible    | 	to retry, use: --limit @/root/playbook/playbook.retry

--- a/docker/ansible/Dockerfile
+++ b/docker/ansible/Dockerfile
@@ -6,7 +6,13 @@ ENV ISLANDORA_DISTRO="centos/7" \
 WORKDIR /root/playbook
 
 RUN yum -y install epel-release && \
-    yum -y install git ansible openssh-clients
+    yum -y install \
+      git \
+      ansible \
+      openssh-clients \
+      python-pip \
+      python-dev && \
+    pip install ansible==2.7.10
 
 COPY entrypoint.sh /bin/
 
